test/src/e2e_vm_tests/test_programs/should_fail/shadowing/shadowed_consts_and_vars/src/lib.sw
library;

pub const L_A: u64 = 5;

pub const L_X: u64 = 5;

pub const L_Y: u64 = 5;

pub const L_Z: u64 = 5;

pub const L_K: u64 = 5;

pub const L_M: u64 = 5;

pub const L_N: u64 = 5;
